--- a/aboly.html
+++ b/aboly.html
@@ -1291,7 +1291,7 @@ img.characterimg {
 <li><p><span class="lyterm">旅</span>：陈列祭品进行祭祀。按周礼，天子可以祭祀天下名山，诸侯可以祭祀自己封地内的名山。季氏作为鲁国大夫而去祭泰山，是非分越礼的。</p></li>
 <li><p><span class="lyterm">弗</span>（<span class="lypinyin">fú</span>）：不。<span class="lyexample"><span>【例】</span><span><a href="#5.9" class="lyref">5.9</a> <span class="lyq">弗如也。</span></span></span></p></li>
 <li><p><span class="lyterm">救</span>：制止，阻止，这是其本义。<span class="lyexample"><span>【例】</span><span>《史记·孙子吴起列传》载，孙膑献围魏救赵之计时说：<span class="lyq">夫解杂乱纷纠者不控捲，救斗者不搏撠。批亢捣虚，形格势禁，则自为解耳。</span>（控：操。捲：通“拳”。搏：抓取。撠：通“戟”。批：用手击打。亢（<span class="lypinyin">háng</span>）：通“吭”，咽喉。）</span></span></p></li>
-<li><p><span class="lyterm"><a href="#zeng1">曾</a>谓泰山不如林放乎？</span>：难道说泰山之神还不如凡人林放（懂礼，愿意接受这种谄祭）吗？</p></li>
+<li><p><span class="lyterm"><a href="#zeng1">曾</a>谓泰山不如林放乎？</span>：难道说泰山之神还不如凡人林放（懂礼，愿意接受这种谄祭）吗？<span class="lyseealso"><span>【参】</span><span><a href="#2.24" class="lyref">2.24</a> <span class="lyq">非其鬼而祭之，谄也。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="3.7"></a><div class="lyblob">
@@ -1972,7 +1972,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#5.16">5.16</a></div>
 <div class="lybloboriginaltext"><p>子谓<a href="#zichan">子产</a>：“有君子之道四焉：其行己也恭，其事上也敬，其养民也惠，其使民也义。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="xingji"></a><span class="lyterm">行己</span>：自己立身做事，behave oneself。<span class="lyexample"><span>【例】</span><span><a href="#13.20" class="lyref">13.20</a> <span class="lyq">行己有耻。</span></span></span></p></li>
+<li><p><a id="xingji"></a><span class="lyterm">行己</span>：自己立身做事，behave oneself。<span class="lyexample"><span>【例】</span><span><a href="#13.20" class="lyref">13.20</a> <span class="lyq">行己有耻。</span></span></span>亦参 <a href="#15.24" class="lyref">15.24</a>  所引《中庸》“君子之道四”。</p></li>
 <li><p><a id="hui4a"></a><span class="lyterm">惠</span>：宽厚仁爱。<span class="lyseealso"><span>【参】</span><span><a href="#14.9" class="lyref">14.9</a> <span class="lyq">或问子产，子曰：“惠人也。”</span></span></span></p></li>
 <li><p><span class="lyterm"><a href="#yi4">义</a></span>：宜，指顺应民心，不扰民。<a href="#6.22" class="lyref">6.22</a> <span class="lyq">务民之义</span>里也是这个意思。</p></li>
 </ul></div>
@@ -4267,7 +4267,7 @@ img.characterimg {
 </li>
 <li><p><span class="lyterm">在<a href="#bang1">邦</a></span>指在朝廷为官，<span class="lyterm">在<a href="#jia1">家</a></span>指在卿大夫家做家臣。</p></li>
 <li><p><a id="lvyixiaren"></a><span class="lyterm">虑<a href="#yi3a">以</a>下人</span>：（遇事）多考虑，多谦让。<a id="xiaren"></a><span class="lyterm">下人</span>：（甘愿）位居他人之下，<span class="lyterm">下</span>是动词。<span class="lyexample"><span>【例】</span><span>成语“礼贤下士”（礼也是动词）。《三国志·蜀书·先主备》说刘备<span class="lyq">少语言，善下人，喜怒不形于色。</span></span></span></p></li>
-<li><p><span class="lyterm">居之不疑</span>：安于自己的处境、地位而不起疑虑，这里是指伪善得连自己都相信了。</p></li>
+<li><p><span class="lyterm">居之不疑</span>：安于自己的处境、地位而不起疑虑，这里是指伪善得连自己都相信了。<span class="lyseealso"><span>【参】</span><span>《礼记·大学》：<span class="lyq">所谓诚<a href="#qi2">其</a>意者，毋自欺也。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="12.21"></a><div class="lyblob">
@@ -5282,7 +5282,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#15.20">15.20</a></div>
 <div class="lybloboriginaltext"><p>子曰：“君子疾没世而名不称焉。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm"><a href="#mo4a">没</a>（<span class="lypinyin">mò</span>）世</span>：从世界上消失，即“死”的文雅说法，又引申为至死、终身。后来有成语“没世无闻”。</p></li>
+<li><p><a id="moshi"></a><span class="lyterm"><a href="#mo4a">没</a>（<span class="lypinyin">mò</span>）世</span>：从世界上消失，即“死”的文雅说法，又引申为至死、终身。后来有成语“没世无闻”。</p></li>
 <li><p><span class="lyterm">称</span>：（被人）称道、称颂。<span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> <a href="#16.12" class="lyref">16.12</a> 。《日知录·卷七·君子疾没世而名不称焉》：<span class="lyq">疾名之不称，则必求其实矣。君子岂有务名之心哉！……古人求没世之名，今人求当世之名。</span></span></span></p></li>
 </ul></div>
 </div>
@@ -5315,7 +5315,7 @@ img.characterimg {
 </div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize"><li><p><span class="lyterm">言</span>：字。根据上下文，它既可指一个字，也可指一句话。<span class="lyexample"><span>【例】</span><span><a href="#17.8" class="lyref">17.8</a> <span class="lyq">女闻六言六蔽矣乎？</span><a href="#2.2" class="lyref">2.2</a> <span class="lyq">一言以蔽之。</span>诗体有“七言绝句”，成语有“三言两语”。</span></span></p></li></ul>
-<p><span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">忠恕违道不远，施诸己而不远，<a href="#yi4d">亦</a>勿施于人。君子之道四，丘未能一焉：所求乎子，以事父，未能也；所求乎臣，以事君，未能也；所求乎弟，以事兄，未能也；所求乎朋友，先施之，未能也。</span></span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span><a id="zhongshuweidaobuyuan"></a>《中庸》引孔子语：<span class="lyq"><a href="#zhong1">忠</a>、<a href="#shu4">恕</a>违道不远，施诸己而不愿，<a href="#yi4d">亦</a>勿施于人。君子之道四，丘未能一焉：所求乎子，以事父，未能也；所求乎臣，以事君，未能也；所求乎弟，以事兄，未能也；所求乎朋友，先施之，未能也。</span></span></span></p>
 </div>
 </div>
 <a id="15.25"></a><div class="lyblob">
@@ -5597,8 +5597,8 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#16.12">16.12</a></div>
 <div class="lybloboriginaltext"><p><a href="#qijinggong">齐景公</a>有马千驷，死之日，民无德而称焉；<a href="#boyishuqi">伯夷</a>、<a href="#boyishuqi">叔齐</a>饿于首阳之下，民到于今称之。其斯之谓与？</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">有马千<a href="#si4">驷</a></span>是齐景公奢侈游逸生活的一个侧影。<span class="lyterm">马</span>指私养玩赏用的良种马，而非军马或与民同乐者，在现代就相当于花公款摆阔。<span class="lyseealso"><span>【参】</span><span>《史记·孔子世家》：<span class="lyq">〔景公〕他日又复问政于孔子，孔子曰：“政在节财。”</span>（节财：指削减公费开支。）</span></span></p></li>
-<li><p><span class="lyterm">其斯之谓与？</span>：指的应该就是这个吧？本章疑有缺漏，所指无法确考。有认为 <a href="#12.10" class="lyref">12.10</a>  引用的<span class="lyq">诚不以富，亦只以异</span>应该移到本句之前。<span class="lyseealso"><span>【参】</span><span><a href="#15.25" class="lyref">15.25</a> </span></span></p></li>
+<li><p><span class="lyterm">有马千<a href="#si4">驷</a></span>是齐景公奢侈游逸生活的一个侧影。<span class="lyterm">马</span>指私养玩赏用的良种马，而非军马或与民同乐者，在现代就相当于花公款摆阔。<span class="lyseealso"><span>【参】</span><span>《史记·孔子世家》：<span class="lyq">〔景公〕他日又复问政于孔子，孔子曰：“政在节财。”</span>（节财：指削减公费开支。）作为对比，《诗经·周颂·烈文》末尾怀念<a href="#wen">文王</a>、<a href="#wu">武王</a>的盛德：<span class="lyq"><a href="#wu1a">於</a>乎，前王不忘！</span>《礼记·大学》的解释是：<span class="lyq">君子贤其贤而亲其亲，小人乐其乐而利其利，此以<a href="#moshi">没世</a>不忘也。</span></span></span></p></li>
+<li><p><span class="lyterm">其斯之谓与？</span>：指的应该就是这个吧？本章疑有缺漏，所指无法确考。有认为 <a href="#12.10" class="lyref">12.10</a>  引用的<span class="lyq">诚不以富，亦只以异</span>应该移到本句之前。<span class="lyseealso"><span>【参】</span><span><a href="#15.25" class="lyref">15.25</a> <span class="lyq">斯民也，三代之所以直道而行也。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="16.13"></a><div class="lyblob">
@@ -6297,7 +6297,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#zigong">子贡</a>曰：“纣之不善，不如是之甚也。是以君子恶居下流，天下之恶皆归焉。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="zhou"></a><span class="lyterm">纣</span>（<span class="lypinyin">zhòu</span>，？—前1046年）：<a href="#shangchao">商朝</a>末代暴君，名辛，谥号是纣（“残义损善曰纣”）。《史记·殷本纪》载，他天资过人，然而奢侈淫靡，残暴好杀：<span class="lyq">帝纣资辨捷疾，闻见甚敏，材力过人，手格猛兽。知足以距谏，言足以饰非。矜人臣以能，高天下以声，以为皆出己之下。好酒淫乐，嬖于妇人。……以酒为池，悬肉为林，……为长夜之饮，……有炮格之法。</span>（距：通“拒”。<a id="bi4a"></a>嬖（<span class="lypinyin">bì</span>）：宠爱。炮（<span class="lypinyin">páo</span>）格：又称炮烙，古代一种酷刑：<span class="lyq">膏铜柱，下加之炭，令有罪者行焉，辄堕炭中。</span>（《史记集解》引《列女传》。））牧野之战被<a href="#wu">周武王</a>击败后，登台自焚而死。</p></li>
-<li><p><span class="lyterm">不如是</span>的<span class="lyterm">是</span>，应是指当时流行的看法，大众观点。这反映了子贡独立务实的一面。</p></li>
+<li><p><span class="lyterm">不如是</span>的<span class="lyterm">是</span>，应是指当时流行的看法，大众观点。这反映了子贡独立务实的一面。<span class="lyseealso"><span>【参】</span><span>《礼记·大学》：<span class="lyq"><a href="#hao4">好</a>而知其恶，<a href="#wu4">恶</a>而知其美者，天下<a href="#xian3">鲜</a>矣。</span></span></span></p></li>
 <li><p><span class="lyterm">下流</span>：河流的下游，比喻位卑势弱的处境。人到这时，恶名就像各种污染排放物一样，不招自来。<span class="lyseealso"><span>【参】</span><span>老子推崇守柔处卑，与子贡的观点相反。《老子》第8章：<span class="lyq">上善若水。水善利万物而不争，处众人之所恶，故<a href="#ji1a">几</a>于道。</span></span></span></p></li>
 </ul></div>
 </div>
@@ -6506,7 +6506,7 @@ img.characterimg {
 <p><a id="jishi"></a><span class="lycharname">季氏</span>，<span class="lycharname">季孙</span>，<span class="lycharname">季</span>：即季孙氏，鲁国<a href="#sanhuan">三桓</a>家族之一，是鲁桓公嫡次子<a href="#jiyou">季友</a>的后代，实力为三桓之首，在鲁国权势熏天。<a href="#jihuanzi">季桓子</a>、<a href="#jikangzi">季康子</a>任<a href="#zongzhu">宗主</a>期间，孔子的不少弟子做过季氏家臣，如<a href="#ranqiu">冉求</a>、<a href="#zilu">子路</a>、<a href="#yong">冉雍</a>，此外也有不愿就列的<a href="#minziqian">闵子骞</a>。后来鲁穆公（前415年—前377年在位）继位，终于从三桓手中夺回政权。季孙氏据其封邑<a href="#feiyi">费邑</a>独立为费国，后世宗主仅费惠公在《孟子·万章下》有片言留存。从鲁僖公元年（前659年）季友任<a href="#qingdafushi">正卿</a>算起，季氏家族在鲁国风光了近两个半世纪。 <a href="#3.1" class="lyref">3.1</a> <a href="#3.6" class="lyref">3.6</a> <a href="#6.9" class="lyref">6.9</a> <a href="#11.17" class="lyref">11.17</a> <a href="#13.2" class="lyref">13.2</a> <a href="#14.36" class="lyref">14.36</a> <a href="#16.1" class="lyref">16.1</a> <a href="#18.3" class="lyref">18.3</a> </p>
 <p><a id="kongwenzi"></a><span class="lycharname">孔文子</span>，<span class="lycharname">仲叔圉</span>（<span class="lypinyin">yǔ</span>）：孔圉（？—前480年），谥号是文，<a href="#weilinggong">卫灵公</a>时期的卫国上卿。他的妻子是卫庄公<a href="#weijun">蒯聩</a>的姐姐，<a id="kongkui"></a>儿子孔悝（<span class="lypinyin">kuī</span>）也是卫国大夫。<a href="#zilu">子路</a>曾任孔悝的邑宰。 <a href="#5.15" class="lyref">5.15</a> <a href="#14.19" class="lyref">14.19</a> </p>
 <p><a id="li"></a><span class="lycharname">鲤</span>，<span class="lycharname">伯鱼</span>：孔鲤（前532年—前483年），字伯鱼，孔子唯一的儿子。出生时<a href="#zhaogong">鲁昭公</a>送来一条鲤鱼当贺礼，就以之为名。他比孔子早去世4年，终年50岁，留下幼子孔伋。 <a href="#11.8" class="lyref">11.8</a> <a href="#16.13" class="lyref">16.13</a> <a href="#17.10" class="lyref">17.10</a> </p>
-<p><a id="zisi"></a>孔伋（前483年—前402年），字子思（与<a href="#yuansi">原宪</a>同字），受业于<a href="#zengshen">曾参</a>，后被封为<span class="lykeyword">述圣</span>，<a id="mengzi"></a>亚圣孟轲是其再传弟子。他继承了孔子的学统，一般认为，《礼记》第30—33篇：《坊记》、《中庸》、《表记》、《缁衣》，都是他的作品。南宋咸淳三年（1267年），宋度宗诏令以<a href="#yanhui">颜回</a>、曾参、孔伋、孟轲配享于孔庙，随孔子接受祭祀，称为<span class="lykeyword">四配</span>，位在<a href="#sikeshizhe">十哲</a>之前。</p>
+<p><a id="zisi"></a>孔伋（前483年—前402年），字子思（与<a href="#yuansi">原宪</a>同字），受业于<a href="#zengshen">曾参</a>，后被封为<span class="lykeyword">述圣</span>，<a id="mengzi"></a>亚圣孟轲是其再传弟子。他继承了孔子的学统，《汉书·艺文志》记有《子思》23篇，可到唐代就已失传。一般认为，《礼记·中庸》是他的作品；《隋书·音乐志上》引沈约奏答梁武帝之言称，《礼记》第30—33篇，<span class="lyq">《中庸》、《表记》、《坊记》、《缁衣》，皆取《子思子》。</span>南宋咸淳三年（1267年），宋度宗诏令以<a href="#yanhui">颜回</a>、曾参、孔伋、孟轲配享于孔庙，随孔子接受祭祀，称为<span class="lykeyword">四配</span>，位在<a href="#sikeshizhe">十哲</a>之前。</p>
 <p><a id="linfang"></a><span class="lycharname">林放</span>：鲁国人，事迹不详。 <a href="#3.4" class="lyref">3.4</a> <a href="#3.6" class="lyref">3.6</a> </p>
 <p><a id="liuxiahui"></a><span class="lycharname">柳下惠</span>（前720年—前621年）：展获，字禽，又字季，也称展禽或柳下季，鲁国大夫。柳下是他的封邑（在今山东省济南市平阴县），惠是他的<a href="#liuxiahuiqi">私谥</a>（“柔质慈民曰惠”）。他以正直达观著称，在《左传》、《国语》、《孟子》等中都受到推崇。如《孟子·万章下》说他<span class="lyq">不羞污君，不辞小官；进不隐贤，必以其道；遗佚而不<a href="#yuan4b">怨</a>，<a href="#e4b">厄</a><a href="#qiong2">穷</a>而不<a href="#min3b">悯</a>。与乡人处，<a href="#youyou">由由</a>然不忍去也。……故闻柳下惠之风者，鄙夫宽，薄夫敦。</span>（不羞污君：不以君主不贤明为耻（而辞官避世，离弃父母之邦）。遗佚：指未能入选为官。敦：厚，笃实。）他是柳姓始祖，典故“坐怀不乱”的主角。 <a href="#15.14" class="lyref">15.14</a> <a href="#18.2" class="lyref">18.2</a> <a href="#18.8" class="lyref">18.8</a> </p>
 <p><a id="menggongchuo"></a><span class="lycharname">孟公绰</span>，<span class="lycharname">公绰</span>：与孔子同时代的鲁国大夫，<a href="#mengshi">孟氏</a>族人，为人廉静寡欲。《左传·襄公二十五年》（前517年）载，当年春，<a href="#cuizhu">崔杼</a>率齐军侵入鲁国北疆，襄公向晋国求救。孟公绰发现齐军不像往常那样大肆劫掠，穷尽民力，认为崔杼别有所图：<span class="lyq">崔子将有大志，不在<a href="#bing4">病</a>我，必速归，何患焉？</span>果然齐军虚张声势了一阵就回去了，同年5月，齐庄公被弑。 <a href="#14.11" class="lyref">14.11</a> <a href="#14.12" class="lyref">14.12</a> </p>
