--- a/aboly.html
+++ b/aboly.html
@@ -801,7 +801,7 @@ img.characterimg {
 <p>历史上，“法先王”与“法后王”的浪潮此起彼伏。前者重在继承，是对过去黄金年代的追忆重建，长于深刻严谨的反思；后者重在发展，是对未来理想世界的憧憬探求，长于勇猛无畏的前进。</p>
 </li>
 <li><p><span class="lyterm">斯</span>：指示代词，这，此。<span class="lyexample"><span>【例】</span><span><a href="#9.17" class="lyref">9.17</a> <span class="lyq">逝者如斯夫！</span></span></span></p></li>
-<li><p><span class="lyterm">小大由之</span>：（无论）大事小事，（都）遵循这个原则。</p></li>
+<li><p><span class="lyterm">小大由之</span>：（无论）大事小事，（都）遵循这个原则。<a id="xiaoda"></a><span class="lyterm">小大</span>：大大小小的，所有，一切。</p></li>
 <li>
 <p><span class="lyterm">有所不行：知和而和，不以礼节之，亦不可行也</span>。<span class="lyterm">不行</span>：行不通，不起作用。<span class="lyexample"><span>【例】</span><span><a href="#12.6" class="lyref">12.6</a> <span class="lyq">浸润之谮、肤受之愬，不行焉，可谓明也已矣。</span></span></span></p>
 <p><span class="lyterm">知和而和</span>：只知道“和”好，（没有充分理解，）而硬追求“和”。</p>
@@ -2589,7 +2589,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#7.12">7.12</a></div>
 <div class="lybloboriginaltext"><p>子曰：“富而可求也，虽执鞭之士，吾亦为之；如不可求，从吾所好。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">可</span>：这里的判断标准，并非客观上是否存在可行的途径，而是这样做是否符合道义，可以比较 <a href="#4.3" class="lyref">4.3</a>  的“能”。<span class="lyterm">可求</span>即当求。它的反面就像朱熹形容的，<span class="lyq">惟得之求，无复<a href="#lian2">廉</a><a href="#chi3a">耻</a></span>（《宋史·朱熹传》）。<span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> 。苏轼《上梅直讲书》：<span class="lyq">人不可以<a href="#gou3">苟</a>富贵，亦不可以<a href="#tu2a">徒</a>贫贱。</span>（梅直讲：即梅尧臣，时任国子监直讲，辅助博士、助教讲授经学。）</span></span></p></li>
+<li><p><span class="lyterm">可</span>：这里的判断标准，并非客观上是否存在可行的途径，而是这样做是否符合道义，可以比较 <a href="#4.3" class="lyref">4.3</a>  的“能”。<span class="lyterm">可求</span>即当求。它的反面就像朱熹形容的，<span class="lyq">惟得之求，无复<a href="#lian2">廉</a><a href="#chi3a">耻</a></span>（《宋史·朱熹传》）。<span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> 。苏轼《上梅直讲书》：<span class="lyq">人不可以<a href="#gou3">苟</a>富贵，亦不可以<a href="#tu2a">徒</a>贫贱。</span>（梅直讲：即梅尧臣，时任国子监直讲，辅助博士、助教讲授经学。）故作清高不可取，正如《聊斋志异·黄英》所言：<span class="lyq">自食其力不为贪，贩花为业不为俗。人固不可苟求富，然亦不必务求贫也。</span></span></span></p></li>
 <li><p><span class="lyterm">执鞭之士</span>：《周礼》中有两说，一是在市集门口握鞭巡视并维持秩序的“胥”（<span class="lypinyin">xū</span>，见《地官司徒》），一是天子诸侯出行时以鞭击地使路人回避的“条狼氏”（见《秋官司寇》），都属于下等差役。皇侃《论语义疏》解释为驾车之士，就与 <a href="#9.2" class="lyref">9.2</a>  暗合。总之都是司职低微的小角色。<span class="lyexample"><span>【例】</span><span>《史记·管晏列传》结尾，司马迁感慨：<span class="lyq">假令<a href="#yanpingzhong">晏子</a>而在，余虽为之执鞭，所忻慕焉。</span>（忻：通“欣”。）《三国演义》：<span class="lyq">职守，人之大义也。凡人在难，犹或<a href="#xu4c">恤</a>之；执鞭而弃其事，不祥莫大焉。</span></span></span></p></li>
 </ul></div>
 </div>
@@ -2691,7 +2691,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#7.23">7.23</a></div>
 <div class="lybloboriginaltext"><p>子曰：“天生德于予，桓魋其如予何？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">天生德于予</span>：类似于说<a href="#tianming">天命</a>在我，这是孔子自信不会身遭横祸。</p></li>
+<li><p><span class="lyterm">天生<a href="#de2a">德</a>于予</span>：类似于说<a href="#tianming">天命</a>在我，这是孔子自信不会身遭横祸。</p></li>
 <li><p><a id="huantui"></a><span class="lyterm">桓魋</span>（<span class="lypinyin">tuí</span>）：即当时宋国的司马（全国军事长官）向魋，他是宋桓公的后代，<a href="#simaniu">司马牛</a>的二哥，<a id="songjinggong"></a>极受宋景公（前516年—前469年在位）宠信。前492年，孔子经过宋国，曾批评桓魋奢侈无度。桓魋可能担心景公重用孔子使自己失宠，带兵去加害孔子，被孔子避开了。前481年，桓魋失宠后<a href="#woduwu">叛乱</a>失败，先逃到卫国，又到齐国，被<a href="#chenchengzi">田恒</a>任用为次卿。事见《孔子家语·曲礼子贡问》、《史记·孔子世家》、《左传·哀公十四年》。他还是成语“殃及池鱼”的主角，事见《吕氏春秋·孝行览·必己》。</p></li>
 </ul></div>
 </div>
@@ -2709,7 +2709,7 @@ img.characterimg {
 <a id="7.25"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#7.25">7.25</a></div>
 <div class="lybloboriginaltext"><p>子以四教：文、行、忠、信。</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">文</span>：指礼乐教化典籍。<span class="lyterm"><a href="#xing2">行</a></span>：指道德行为。</p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">文</span>：指礼乐教化的典籍。<span class="lyterm"><a href="#xing2">行</a></span>：指道德行为。</p></li></ul></div>
 </div>
 <a id="7.26"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#7.26">7.26</a></div>
@@ -2850,7 +2850,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#8.1">8.1</a></div>
 <div class="lybloboriginaltext"><p>子曰：“泰伯，其可谓至德也已矣。三以天下让，民无得而称焉。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="taibo"></a><span class="lyterm">泰伯</span>：<a href="#zhouchao">周</a>王室先祖古公亶父（<span class="lypinyin">dǎn fǔ</span>）的长子。古公在岐山（今属陕西省宝鸡市）脚下建国，其南有周原，故取国名为周。古公有长子泰伯，次子仲雍，<a id="gongji"></a>少子季历（后称公季）。季历生姬昌，就是后来的<a href="#wen">周文王</a>。姬昌出生时天降祥瑞，古公说兴周者当为姬昌，于是泰伯、仲雍认为应该让位于弟以传姬昌，于是托言采药，一同出走至荆蛮之地（当时未开化的江南地区，实址在今江苏省无锡市梅村），并纹身随俗，以示不可用。<a href="#wu">周武王</a>灭商后，寻访他们的后代，发现已在当地自立为君了，就<a href="#juewei">赐爵</a>为吴伯。吴国都城在今江苏省苏州市。事见《史记·周本纪》、《史记·吴太伯世家》。</p></li>
+<li><p><a id="taibo"></a><span class="lyterm">泰伯</span>：<a href="#zhouchao">周</a>王室先祖古公亶父（<span class="lypinyin">dǎn fǔ</span>，后被尊为周太王）的长子。古公在岐山（今属陕西省宝鸡市）脚下建国，其南有周原，故取国名为周。古公有长子泰伯，次子仲雍，<a id="gongji"></a>少子季历（后称公季、王季）。季历生姬昌，就是后来的<a href="#wen">周文王</a>。姬昌出生时天降祥瑞，古公说兴周者当为姬昌，于是泰伯、仲雍认为应该让位于弟以传姬昌，于是托言采药，一同出走至荆蛮之地（当时未开化的江南地区，实址在今江苏省无锡市梅村），并纹身随俗，以示不可用。<a href="#wu">周武王</a>灭商后，寻访他们的后代，发现已在当地自立为君了，就<a href="#juewei">赐爵</a>为吴伯。吴国都城在今江苏省苏州市。事见《史记·周本纪》、《史记·吴太伯世家》。</p></li>
 <li><p><span class="lyterm">三以天下让</span>：指三次辞让当时周国（而非王朝意义的全天下）的继承权。<span class="lyterm">三让</span>，一说为：去国入蛮；父死不奔丧；断发纹身终生不返。</p></li>
 <li>
 <p><span class="lyterm">无得而称焉</span>：找不到合适的措辞来赞美他。<span class="lyterm">无得</span>：无从，没有办法，相当于现代口语“没得”（例如没得说，没得挑剔）。<span class="lyterm">称</span>：颂扬，称道。</p>
@@ -4351,7 +4351,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">卫君待子而为政</span>：如果卫君请您去治国理政的话。<span class="lyterm">而</span>是普通连词，这句话的假设、条件意味，由后面的问句<span class="lyterm">子将<a href="#xi1">奚</a>先</span>提供，相当于给开头补上了“若”，语气较为舒缓。<a href="#2.22" class="lyref">2.22</a>  用在主谓语之间的<a href="#er2a">而</a>，假设语气更直接和强烈。</p></li>
 <li>
-<p><a id="zhengming"></a><span class="lyterm">正名</span>：端正名分，使名实相符，实指<a href="#junchenfuzi">君臣父子</a>的正统关系。</p>
+<p><a id="zhengming"></a><span class="lyterm">正名</span>：端正名分，使名实相符，古注多解作<a href="#junchenfuzi">君臣父子</a>的正统关系。</p>
 <p>汉代尊儒，教化中强调名分地位的意义，“以名为教”，<a href="#14.26">不出其位</a>，用以维护等级秩序。魏晋起，称儒家礼教为<span class="lykeyword">名教</span>，按陈寅恪先生《金明馆丛稿初编·陶渊明之思想与清谈之关系》的解释，<span class="lyq">以名为教，即以官长君臣之义为教，亦即入世求仕者所宜奉行者也。其主张与崇尚自然即避世不仕者适相违反。</span><a id="jiancuanweijiao"></a>超越本分之举称为<span class="lykeyword"><a href="#jian4a">僭</a></span>，<a id="cuan4"></a>臣夺君位称为<span class="lykeyword">篡</span>（<span class="lypinyin">cuàn</span>），名实不符之物称为<span class="lykeyword">伪</span>，假托上命称为<span class="lykeyword">矫</span>，都是很忌讳的。</p>
 <div class="lyseealso">
 <p><span>【参】</span><span>《日知录·卷十三·名教》：<span class="lyq">《南史》有云：“汉世士务修身，故忠孝成俗；至于乘轩服冕，非此莫由。晋、宋以来，风衰义缺。”故昔人之言曰名教，曰名节，曰功名，不能使天下之人以义为利，而犹使之以名为利；虽非纯<a href="#wangdao">王</a>之风，<a href="#yi4d">亦</a>可以救积洿之俗矣。……故名胜于利，则小人之道消；利胜于名，则贪暴之风扇。……人不爱名，则圣人之<a href="#quan2">权</a>去矣。</span>（轩：大夫及以上所乘的车。乘轩服<a href="#mian3">冕</a>：指做大官，飞黄腾达。洿：通“污”。扇（<span class="lypinyin">shān</span>）：兴。）</span></p>
@@ -4361,7 +4361,7 @@ img.characterimg {
 <li><p><span class="lyterm">迂</span>：保守不切实际，本义为曲折。当时卫国正是父子争位的局面，孔子的回答坚持了他在大义上的原则。</p></li>
 <li>
 <p><span class="lyterm">无所<a href="#cuo4">错</a>手足</span>：指不知要怎么做才妥当。后来有成语“手足无措”，形容人慌乱无定的样子，多用于心情紧张或应付不来事情的场景。</p>
-<p><span class="lyseealso"><span>【参】</span><span>在位君子既然享有<a href="#dezhi">民之父母</a>的优越地位，被统治者就容易感到授人以柄，缺乏反向约束力。所以史籍中不仅颂扬德政，还常强调法之尊严，督促上位者成为楷模。如《史记·张释之冯唐列传》载，有行人误惊了汉文帝的御马，廷尉张释之依法判处罚金四两（据裴骃《史记集解》），受到文帝怒责，<span class="lyq">释之曰：“法者，<a href="#tianzi">天子</a>所与天下公共也。今法如此而更重之，是法不信于民也。且方其时，上使立诛之则已；今既下廷尉，廷尉，天下之平也，一倾而天下用法皆为轻重，民安所错手足？唯陛下察之。”良久，上曰：“廷尉当是也。”</span>（<a id="tingwei"></a>廷尉：秦汉两代的最高司法官，九卿之一，北齐后称大理寺卿。“立诛之则已”仍是天子的特权。）</span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span>在位君子既然享有<a href="#dezhi">民之父母</a>的优越地位，被统治者就容易感到授人以柄，缺乏反向约束力。所以史籍中不仅颂扬德政，还常强调法之尊严，督促上位者成为天下楷模。如《史记·张释之冯唐列传》载，有行人误惊了汉文帝的御马，廷尉张释之依法判处罚金四两（据裴骃《史记集解》），受到文帝怒责，<span class="lyq">释之曰：“法者，<a href="#tianzi">天子</a>所与天下公共也。今法如此而更重之，是法不信于民也。且方其时，上使立诛之则已；今既下廷尉，廷尉，天下之平也，一倾而天下用法皆为轻重，民安所错手足？唯陛下察之。”良久，上曰：“廷尉当是也。”</span>（<a id="tingwei"></a>廷尉：秦汉两代的最高司法官，九卿之一，北齐后称大理寺卿。“立诛之则已”仍是天子的特权。）</span></span></p>
 </li>
 <li><p><a id="gou3"></a><span class="lyterm">苟</span>：随便，不慎重，又特指不正当，不合礼法，不知羞耻。<span class="lyexample"><span>【例】</span><span>成语“不苟言笑”、“蝇营狗苟”。</span></span></p></li>
 </ul></div>
@@ -5428,7 +5428,7 @@ img.characterimg {
 <a id="15.39"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#15.39">15.39</a></div>
 <div class="lybloboriginaltext"><p>子曰：“有教无类。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">有教无类</span>：只有老师施行教育的职责，没有应当得到教育的学生的类别。也就是教育工作不应考虑学生的贫富贵贱、族姓国别，不应心怀功利偏私，而要一视同仁：只有学生，没有“该”教的“好”学生。这种博大仁心，是所有教师的榜样。<span class="lyseealso"><span>【参】</span><span><a href="#7.29" class="lyref">7.29</a> <span class="lyq">人洁己以进，与其洁也，不保其往也。</span><a href="#16.13" class="lyref">16.13</a>  伯鱼未有异闻。《吕氏春秋·孟夏纪·劝学》：<span class="lyq">师之教也，不争轻重、尊卑、贫富，而争于道。其人<a href="#gou3a">苟</a>可，其事无不可，所求尽得，所欲尽成。</span>（争：指看重。）</span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">有教无类</span>：只有老师施行教育的职责，没有应当得到教育的学生的类别。也就是教育工作不应考虑学生的贫富贵贱、族姓国别，不应心怀功利偏私，而要一视同仁：只有学生，没有该教的“好学生”、不该教的“坏学生”。这种博大仁心，是所有教师的榜样。<span class="lyseealso"><span>【参】</span><span><a href="#7.29" class="lyref">7.29</a> <span class="lyq">人洁己以进，与其洁也，不保其往也。</span><a href="#16.13" class="lyref">16.13</a>  伯鱼未有异闻。《吕氏春秋·孟夏纪·劝学》：<span class="lyq">师之教也，不争轻重、尊卑、贫富，而争于道。其人<a href="#gou3a">苟</a>可，其事无不可，所求尽得，所欲尽成。</span>（争：指看重。）《聊斋志异·黄英》里有句说菊花品种的话，也可移用于此：<span class="lyq">种无不佳，培溉在人。</span></span></span></p></li></ul></div>
 </div>
 <a id="15.40"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#15.40">15.40</a></div>
@@ -5644,7 +5644,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
 <p><span class="lyterm">阳货欲见孔子</span>。<a id="yanghuo"></a><span class="lyterm">阳货</span>：阳虎，字货，<a href="#mengshi">孟氏</a>族人，<a href="#jishi">季氏</a>的管家，“<a href="#16.2">陪臣执国命</a>”的风云人物。前505年（《左传·定公五年》），阳货囚禁了季氏新任的第5代宗主<a href="#jihuanzi">季桓子</a>，逐杀其亲信，逼其立盟就范，次年冬又与<a href="#dinggong">鲁定公</a>、<a href="#sanhuan">三桓</a>及<a href="#guoren">国人</a>立盟，从而掌握了鲁国国政。本章的对话应即发生在阳货掌权期间。</p>
-<p>前502年，阳货进一步谋划将<a href="#sanhuan">三桓</a>宗主一网打尽，由自己和串通好的季氏、叔孙氏两位庶子取代。冬十月大祭，即将动手干掉季桓子，<a id="gonglianchufu"></a>孟氏封邑<a href="#chengyi">成邑</a>之宰公敛处父察觉到异状，提醒主公<a href="#mengyizi">孟懿子</a>先作防范；季桓子也幸运地说动了卫士，逃到孟家。阳货于是挟持了<a href="#dinggong">鲁定公</a>和<a href="#shusunwushu">叔孙武叔</a>去攻打孟氏，被公敛处父两战击退，只好北退到临近齐国边境的讙（<span class="lypinyin">huān</span>）、阳关二城继续顽抗。次年6月，喘息已定的三桓一举将其逐出鲁国，他仍不甘寂寞，先跑到齐国，唆使<a href="#qijinggong">齐景公</a>攻打鲁国，事败被擒后连使诡计逃脱，又投奔晋国，继续施展他的<a href="#weijun">雄才大略</a>了。<span class="lyseealso"><span>【参】</span><span>《孟子·滕文公上》引用了他的一句名言：<span class="lyq">为富不仁矣，为仁不富矣</span>，是认为二者无法兼得。可以比较《圣经·新约·马太福音》6:24：<span class="lyqe">Ye cannot serve God and mammon.</span>（<span class="lyq">你们不能又事奉神，又事奉玛门。Mammon：财利贪欲的化身。</span>）鲁迅在《华盖集·十四年的“读经”》（发表于1925年底）中也说：<span class="lyq">倘使老实，必不能阔。</span></span></span></p>
+<p>前502年，阳货进一步谋划将<a href="#sanhuan">三桓</a>宗主一网打尽，由自己和串通好的季氏、叔孙氏两位庶子取代。冬十月大祭，即将动手干掉季桓子，<a id="gonglianchufu"></a>孟氏封邑<a href="#chengyi">成邑</a>之宰公敛处父察觉到异状，提醒主公<a href="#mengyizi">孟懿子</a>先作防范；季桓子也幸运地说动了卫士，逃到孟家。阳货于是挟持了<a href="#dinggong">鲁定公</a>和<a href="#shusunwushu">叔孙武叔</a>去攻打孟氏，被公敛处父两战击退，只好北退到临近齐国边境的讙（<span class="lypinyin">huān</span>）、阳关二城继续顽抗。次年6月，喘息已定的三桓一举将其逐出鲁国，他仍不甘寂寞，先跑到齐国，唆使<a href="#qijinggong">齐景公</a>攻打鲁国，事败被擒后连使诡计逃脱，又投奔晋国，继续施展他的<a href="#weijun">雄才大略</a>了。<span class="lyseealso"><span>【参】</span><span>《孟子·滕文公上》引用了他的一句名言：<span class="lyq">为富不仁矣，为仁不富矣</span>，是认为二者无法兼得。可以比较《圣经·新约·马太福音》6:24：<span class="lyqe">Ye cannot serve God and mammon.</span>（<span class="lyq">你们不能又事奉神，又事奉玛门。Mammon：财利贪欲的化身。</span>）鲁迅在《华盖集·十四年的“读经”》（发表于1925年底）中也表示：<span class="lyq">倘使老实，必不能阔。</span></span></span></p>
 <p>阳货比孔子年长，据说身形相貌与孔子很像。孔子大约17岁时去赴季氏招揽人才性质的宴会（<a id="jiwuzi"></a>当时是第3代宗主季武子在位），阳货已经是季氏管家了，他出言羞辱并赶走了孔子，现在又来拉拢孔子替自己效力。事见《史记·鲁周公世家》、《史记·孔子世家》。</p>
 <p><span class="lyterm">见</span>：使动用法。阳货想让孔子主动登门拜见自己，形式上表示臣服顺从。</p>
 </li>
@@ -6287,7 +6287,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">阳肤</span>：曾子的弟子。<span class="lyterm">问于曾子</span>的主语是阳肤。</p></li>
 <li><p><span class="lyterm">民散</span>（<span class="lypinyin">sàn</span>）：指民心涣散，不诚心归附。<span class="lyseealso"><span>【参】</span><span><a href="#2.3" class="lyref">2.3</a> <a href="#15.33" class="lyref">15.33</a> </span></span></p></li>
-<li><p><span class="lyterm">得其情</span>：指查知案情真相，可以判罪了。<span class="lyterm"><a href="#qing2">情</a></span>：真实情况，真情实感。<span class="lyexample"><span>【例】</span><span>《史记·高祖本纪》：<span class="lyq">列侯诸将无敢隐朕，皆言其情：吾所以有天下者何？项氏之所以失天下者何？</span></span></span></p></li>
+<li><p><span class="lyterm">得其情</span>：指查知案情真相，可以判罪了。<span class="lyterm"><a href="#qing2">情</a></span>：实情。<span class="lyexample"><span>【例】</span><span>《左传·庄公十年》：<span class="lyq"><a href="#xiaoda">小大</a>之狱，虽不能<a href="#cha2">察</a>，必以情。</span>《古文观止》注：<span class="lyq">虽不能明察，然必尽己之心以求其实。</span></span></span></p></li>
 </ul>
 <p><span class="lyseealso"><span>【参】</span><span><a href="#12.13" class="lyref">12.13</a> 。《孔丛子·刑论》：<span class="lyq">《<a href="#shangshu">书</a>》曰：“哀敬<a href="#zheyu">折狱</a>。”<a href="#yong">仲弓</a>问曰：“何谓也？”孔子曰：“古之<a href="#tingsong">听讼</a>者，察贫贱，哀孤独及<a href="#guan1a">鳏</a>寡老弱不肖而无告者，虽得其情，必哀<a href="#jin1a">矜</a>之。死者不可生，断者不可属。”</span>（所引句出自《尚书·周书·吕刑》。属（<span class="lypinyin">zhǔ</span>）：连，接续。）唐代皮日休《鹿门隐书》：<span class="lyq">古之决狱，得民情也哀。今之决狱，得民情也喜。哀之者，哀其<a href="#hua4">化</a>之不行。喜之者，喜其赏之必至。</span>民生多艰，就像安徒生童话《海蟒》中，一条小鱼在深海遇上了可怕的巨鲸，只有哀求：<span class="lyq">请不要把我吞下去，我连味儿都没有，因为我是这样小，但是我觉得活着是多么愉快啊！</span>（<span class="lyqe">Don't swallow me, I am not even a taste, I am so little, and it is a great pleasure to me to be alive!</span>）（叶君健中译，W. A. Craigie与J. K. Craigie英译。）</span></span></p>
 </div>
@@ -6467,7 +6467,7 @@ img.characterimg {
 <p><a id="gongyechang"></a><span class="lycharname">公冶长</span>（<span class="lypinyin">cháng</span>）：字子长，鲁国人。传说他懂鸟语，<span class="lyq">曾读百鸟之书，能闻众鸟之音</span>（《公冶长听鸟语纲常》），因此蒙冤入狱，见皇侃《论语义疏》引文：<span class="lyq">主问冶长何以杀人，冶长曰：“解鸟语，不杀人。”主曰：“当视之。若必解鸟语，便相放也，若不解，当令偿死。”驻冶长在狱六十日……</span>这虽然离奇，但历来广为人知，成为典故使用，如白居易《池鹤八绝句》诗序：<span class="lyq">诸禽似有所诮，鹤亦时复一鸣。予非冶长，不通其意。</span>公冶长墓在今山东省诸城市贾悦镇。 <a href="#5.1" class="lyref">5.1</a> </p>
 <p><a id="lao"></a><span class="lycharname">牢</span>：《论语》中身份最模糊的弟子，据《孔子家语》王肃序：孔子<span class="lyq">弟子有琴张，一名牢，字子开，亦字张，卫人也</span>，后世多认为是王肃的伪撰。 <a href="#9.7" class="lyref">9.7</a> </p>
 <p><a id="minziqian"></a><span class="lycharname">闵子骞</span>（<span class="lypinyin">qiān</span>），<span class="lycharname">闵子</span>：闵损，字子骞，鲁国人，少孔子15岁，<a href="#11.3">孔门十哲</a>之一。他是元代编录的童蒙读物《二十四孝》第4个故事“<a href="#danyishunmu">单衣顺母</a>”（又称“鞭打芦花”）的主角。今山东省济南市孝文化博物馆内及河南省濮阳市范县，均有闵子骞墓。 <a href="#6.9" class="lyref">6.9</a> <a href="#11.3" class="lyref">11.3</a> <a href="#11.5" class="lyref">11.5</a> <a href="#11.13" class="lyref">11.13</a> <a href="#11.14" class="lyref">11.14</a> </p>
-<p><a id="nangongkuo"></a><span class="lycharname">南宫适</span>（<span class="lypinyin">kuò</span>），<span class="lycharname">南容</span>：字子容，鲁国人，孔子的<a href="#5.2">侄女婿</a>。《孔子家语·弟子行》中，<a href="#zigong">子贡</a>形容他<span class="lyq">独居思仁，公言言义。</span><a href="#5.2" class="lyref">5.2</a> <a href="#11.6" class="lyref">11.6</a> <a href="#14.5" class="lyref">14.5</a> </p>
+<p><a id="nangongkuo"></a><span class="lycharname">南宫适</span>（<span class="lypinyin">kuò</span>），<span class="lycharname">南容</span>：字子容，鲁国人，孔子的<a href="#5.2">侄女婿</a>。《孔子家语·弟子行》中，<a href="#zigong">子贡</a>形容他<span class="lyq">独居思仁，公言言义。</span>他和西周开国大臣南宫适同名。 <a href="#5.2" class="lyref">5.2</a> <a href="#11.6" class="lyref">11.6</a> <a href="#14.5" class="lyref">14.5</a> </p>
 <p><a id="qidiaokai"></a><span class="lycharname">漆雕开</span>：字子若，蔡国人，少孔子11岁，是孔子之后的<a href="#zizhang">八儒</a>之一。《孔子家语·七十二弟子解》说他<span class="lyq">习《<a href="#shangshu">尚书</a>》，不乐仕。</span>《韩非子·显学》说他方正刚直，<span class="lyq">不色挠，不目逃，行曲则违于臧获，行直则怒于诸侯，世主以为<a href="#lian2">廉</a>而礼之。</span>（<a id="nao2"></a>挠：屈。目逃：避视。违：避。臧获：奴婢的贱称，骂奴为臧，骂婢为获。）漆雕开墓在今河南省驻马店市上蔡县。 <a href="#5.6" class="lyref">5.6</a> </p>
 <p><a id="ranqiu"></a><span class="lycharname">冉求</span>，<span class="lycharname">冉有</span>，<span class="lycharname">冉子</span>，<span class="lycharname">求</span>：冉求，字子有，鲁国人，少孔子29岁，<a href="#11.3">孔门十哲</a>之一。他多才多艺，精明务实，曾跟随孔子周游，后来成为<a href="#jikangzi">季康子</a>的得力家臣，不久孔子就被迎接返鲁了。直到前472年（《左传·哀公二十三年》），还有他奉季康子之命赴宋国吊唁的记录。 <a href="#3.6" class="lyref">3.6</a> <a href="#5.8" class="lyref">5.8</a> <a href="#6.4" class="lyref">6.4</a> <a href="#6.8" class="lyref">6.8</a> <a href="#6.12" class="lyref">6.12</a> <a href="#7.15" class="lyref">7.15</a> <a href="#11.3" class="lyref">11.3</a> <a href="#11.13" class="lyref">11.13</a> <a href="#11.17" class="lyref">11.17</a> <a href="#11.22" class="lyref">11.22</a> <a href="#11.24" class="lyref">11.24</a> <a href="#11.26" class="lyref">11.26</a> <a href="#13.9" class="lyref">13.9</a> <a href="#13.14" class="lyref">13.14</a> <a href="#14.12" class="lyref">14.12</a> <a href="#16.1" class="lyref">16.1</a> </p>
 <p><a id="shencheng"></a><span class="lycharname">申枨</span>（<span class="lypinyin">chéng</span>）：字周，鲁国人，事迹不详。 <a href="#5.11" class="lyref">5.11</a> </p>
