--- a/aboly.html
+++ b/aboly.html
@@ -886,10 +886,10 @@ img.characterimg {
 <li>
 <p><a id="de2a"></a><span class="lyterm"><a href="#de2">德</a></span>：特指与上位者的身份地位相匹配的崇高道德品质。它的异体字是惪（<span class="lypinyin">dé</span>，也是其右半边），《说文解字》解释为：<span class="lyq">外得于人，内得于己也。从直，从心。</span>甲骨文中未发现“德”字而有“徝”（<span class="lypinyin">zhì</span>）字，表示视正行直。金文加心成“德”，有时还省去“彳”旁，突出了心地正直的含义。据此推测，道德观念兴起于<a href="#zhouchao">周朝</a>，可能是武力灭<a href="#shangchao">商</a>时，需要用<a href="#geming">天赋王权</a>之说来解释维护自身的正义，即<a href="#13.3">正名</a>。执政过程中，“有德”又成为无可回避的标准。</p>
 <a id="dezhi"></a><div class="lyseealso">
-<p><span>【参】</span><span>儒家推崇的<span class="lykeyword">德治</span>，是将家族观念推广了的贤人政治，在上修身勤政，对下仁爱教化，很依赖上位者的道德才干，于是有了“父母官”、“爱民如子”的说法。《大学》：<span class="lyq">《诗》云：“乐<a href="#zhi1a">只</a>君子，民之父母。”民之所好好之，民之所恶恶之，此之谓民之父母。</span>（所引诗句出自《诗经·小雅·南山有台》。）《论语》中多次强调，执政者必须以身作则，如 <a href="#13.6" class="lyref">13.6</a>  等。《孝经·圣治》也说，<a href="#daren">君子</a><span class="lyq">言思可道，行思可乐，德义可尊，做事可<a href="#fa3">法</a>，容止可观，进退可度，以<a href="#lin2">临</a>其民。是以其民畏而爱之，<a href="#ze2">则</a>而象之，故能成其德教，而行其政令。</span>只有施行德政，才能得到上天眷顾，具体政策则可以灵活掌握。《尚书·周书·蔡仲之命》（伪）：<span class="lyq"><a href="#shangdi">皇天</a>无亲，惟德<a href="#shi4">是</a>辅；民心无常，惟<a href="#hui4">惠</a>之怀。为善不同，同归于治；为恶不同，同归于乱。</span></span></p>
+<p><span>【参】</span><span>儒家推崇的<span class="lykeyword">德治</span>，是将家族观念推广了的贤人政治，在上修身勤政，对下仁爱教化，很依赖上位者的道德才干，于是有了“父母官”、“爱民如子”的说法。《大学》：<span class="lyq">《诗》云：“乐<a href="#zhi1a">只</a>君子，民之父母。”民之所好好之，民之所恶恶之，此之谓民之父母。</span>（所引诗句出自《诗经·小雅·南山有台》。）《论语》多次强调，执政者必须以身作则，如 <a href="#13.6" class="lyref">13.6</a>  等。《孝经·圣治》也说，<a href="#daren">君子</a><span class="lyq">言思可道，行思可乐，德义可尊，做事可<a href="#fa3">法</a>，容止可观，进退可度，以<a href="#lin2">临</a>其民。是以其民畏而爱之，<a href="#ze2">则</a>而象之，故能成其德教，而行其政令。</span>只有施行德政，才能得到上天眷顾，具体政策则可以灵活掌握。《尚书·周书·蔡仲之命》（伪）：<span class="lyq"><a href="#shangdi">皇天</a>无亲，惟德<a href="#shi4">是</a>辅；民心无常，惟<a href="#hui4">惠</a>之怀。为善不同，同归于治；为恶不同，同归于乱。</span></span></p>
 <p><a id="fazhi"></a>法家主张的<span class="lykeyword">法治</span>，以密法严刑为基础，不强求执政者德才无瑕，却足以建立坚实的底线。《管子·任法》：<span class="lyq">所谓仁义<a href="#liyue">礼乐</a>者，皆出于法，此先圣之所以一民也。……君臣上下贵贱皆发<a href="#yan1a">焉</a>，故曰“法”。……君臣上下贵贱皆从法，此谓为大治。</span>（<a id="yimin"></a>一民：统治百姓。发：产生。）《商君书·开塞》：<span class="lyq">古之民朴<a href="#yi3a">以</a>厚，今之民巧以伪。故效于古者，先德而治；效于今者，前刑而法。</span>《韩非子·难势》：<span class="lyq">且夫<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#xiachao">桀</a>、<a href="#zhou">纣</a>，千世而一出，……吾所以为言势者，中也。……抱法处势则治，背法去势则乱。今废势背法而待尧舜，尧舜至乃治，是千世乱而一治也；抱法处势而待桀纣，桀纣至乃乱，是千世治而一乱也。</span></p>
 <p>传统政治实践中，德治与法治相为补益。《孟子·离娄上》认为：<span class="lyq">徒善不足以为政，徒法不能以自行。</span>652年编定的《唐律疏议》首卷倡言：<span class="lyq">德礼为政教之本，刑罚为政教之用，犹昏晓阳秋，相须而成者也。</span>（礼法之功效，在于自律他律。阳秋：即春秋，晋朝时为避文帝皇后讳，改春字为阳。）《汉书·元帝本纪》载，汉元帝为太子时，<a id="hanxuandi"></a>曾向宣帝进言：<span class="lyq">“陛下持刑太深，宜用儒生。”宣帝作色曰：“汉家自有法度，本以<a href="#wangdao">霸王道</a>杂之，奈何纯任德教、用周政乎！且俗儒不达时宜，好是古非今，使人眩于<a href="#zhengming">名实</a>，不知所守，何足委任？”</span></p>
-<p>教化中则多偏重德礼修养，轻视普法宣传。《史记·礼书》开头，<span class="lyq">太史公曰：<a href="#yangyang">洋洋</a>美德乎！宰制万物，役使群众，岂人力也哉？</span>（人力：指强力可为。）《大戴礼记·礼察》：<span class="lyq">凡人之知，能见已然，不能见将然。礼者，禁于将然之前，而法者，禁于已然之后。是故法之用易见，而礼之所为生难知也。</span>（礼法之用，为事前事后。“法禁于已然之后”的观念，可能也造成中国百姓日常法律意识淡薄，违法就自认倒霉。）<a href="#2.3" class="lyref">2.3</a>  比较了法治与德治的效果。</p>
+<p>教化宣传中，则多偏重德礼，轻视普法，效果往往适得其反。《大戴礼记·礼察》说：<span class="lyq">凡人之知，能见已然，不能见将然。礼者，禁于将然之前，而法者，禁于已然之后。是故法之用易见，而礼之所为生难知也。</span>（礼法之用，为事前事后。“法禁于已然之后”的观念，可能也造成中国百姓日常法律意识淡薄，违法就自认倒霉。）用1980年8月邓小平讲话“党和国家领导制度的改革”中的说法：<span class="lyq">制度问题不解决，思想作风问题也解决不了</span>。<a href="#2.3" class="lyref">2.3</a>  比较了法治与德治的效果。</p>
 </div>
 </li>
 <li>
@@ -1859,7 +1859,7 @@ img.characterimg {
 <p><span class="lyterm">御</span>：应对，对付，这是从抵挡、对抗的意义引申来的，表现在话术上，就是狡辩、搪塞。</p>
 <p>后来，“<a href="#yu4b">御</a>人”多指管理下级，但与本章上下文不符。<span class="lyexample"><span>【例】</span><span>《旧五代史·周书·太祖本纪》，周太祖郭威自称<span class="lyq">究为君治国之源，审修己御人之要。</span></span></span></p>
 </li>
-<li><p><span class="lyterm">口给</span>（<span class="lypinyin">jǐ</span>）：口齿伶俐，能说会道。<span class="lyterm">给</span>：充足。<span class="lyexample"><span>【例】</span><span>成语“家给人足”。</span></span></p></li>
+<li><p><span class="lyterm">口给</span>（<span class="lypinyin">jǐ</span>）：口齿伶俐，能说会道。<a id="ji3"></a><span class="lyterm">给</span>：充足。<span class="lyexample"><span>【例】</span><span>成语“家给人足”。</span></span></p></li>
 <li>
 <p><span class="lyterm">不知其仁，焉用佞？</span>：不清楚他能否称得上仁，可为什么要有口才（才行）呢？<a href="#4.24">行重于言</a>是孔子的一贯主张。</p>
 <p><span class="lyterm">不知</span>是孔子委婉表示否定的常用措辞，也就是说冉雍还未达到仁的境界。可以参照 <a href="#4.6" class="lyref">4.6</a> <span class="lyq">我未见力不足者</span>，<a href="#5.8" class="lyref">5.8</a> <span class="lyq">可使治其赋也，不知其仁也</span>，<a href="#5.19" class="lyref">5.19</a> <span class="lyq">未知，焉得仁？</span><a href="#14.1" class="lyref">14.1</a> <span class="lyq">可以为难矣，仁则吾不知也。</span>带上后面的反问句，就有了让步的意味，近似于“且不说”。</p>
@@ -2331,7 +2331,7 @@ img.characterimg {
 </li>
 <li>
 <p><span class="lyterm">野</span>：质朴率性，也含有粗鄙不懂规矩的意味。<span class="lyseealso"><span>【参】</span><span><a href="#13.3" class="lyref">13.3</a> <span class="lyq">野哉，由也！</span></span></span></p>
-<p><a id="shi3b"></a><span class="lyterm">史</span>：文辞繁复，引申为浮夸虚饰。这个意义来自古代祝史（祭祀官）祝辞的繁于文采，<span class="lyq">务博记、尚文辞</span>（北宋张耒（<span class="lypinyin">lěi</span>）），<span class="lyq">知其文而不知其文之实</span>（明代王衡《四书驳异》），近似于现代口语的穷讲究、拿劲、矫情。<span class="lyseealso"><span>【参】</span><span>《仪礼·聘礼》：<span class="lyq">辞无常，<a href="#xun4">孙</a>而说。辞多则史，少则不达。辞苟足以达，义之至也。</span></span></span></p>
+<p><a id="shi3b"></a><span class="lyterm">史</span>：文辞繁复，引申为浮夸虚饰。这个意义来自古代祝史（祭祀官）祝辞的繁于文采，<span class="lyq">务博记、尚文辞</span>（北宋张耒（<span class="lypinyin">lěi</span>）），<span class="lyq">知其文而不知其文之实</span>（明代王衡《四书驳异》），近似于现代口语的穷讲究、拿劲、矫情。<span class="lyexample"><span>【例】</span><span>《韩非子·难言》讲向君上进言之难：<span class="lyq">捷敏辩<a href="#ji3">给</a>，繁于文采，则见以为史。</span></span></span><span class="lyseealso"><span>【参】</span><span>《仪礼·聘礼》：<span class="lyq">辞无常，<a href="#xun4">孙</a>而说。辞多则史，少则不达。辞苟足以达，义之至也。</span></span></span></p>
 </li>
 <li><p><span class="lyterm">彬</span>（<span class="lypinyin">bīn</span>）：文质合宜，相得益彰。其字形从林从彡（<span class="lypinyin">shān</span>，文采），表示文采盛美。成语“文质彬彬”形容人文雅有教养的样子。<span class="lyseealso"><span>【参】</span><span>《圣经·旧约·箴言》25:11：<span class="lyqe">A word fitly spoken is like apples of gold in pictures of silver.</span>（<span class="lyq">一句话说得合宜，就如金苹果在银网子里。</span>）</span></span></p></li>
 </ul></div>
@@ -2433,8 +2433,8 @@ img.characterimg {
 <li>
 <p><a id="nanzi"></a><span class="lyterm">南子</span>：<a href="#songguo">宋国</a>宗室之女，子姓，<a href="#weilinggong">卫灵公</a>的续弦夫人，美艳而有<a href="#songzhao">淫乱</a>之名。前496年，卫太子<a href="#weijun">蒯聩</a>因受宋人<a href="#songzhao">耻笑</a>，欲杀南子，触怒了灵公，蒯聩出奔。3年后灵公去世，蒯聩之子蒯辄继任为<a href="#weijun">卫出公</a>。又12年后，蒯聩夺位为卫庄公，遂杀南子。</p>
 <a id="zijiannanzi"></a><div class="lyseealso">
-<p><span>【参】</span><span>根据孔子周游列国的行程推算，子见南子约在前496年。《左传》未载此事，现仅见于《史记·孔子世家》：<span class="lyq">反乎卫，主<a href="#quboyu">蘧伯玉</a>家。灵公夫人有南子者，使人谓孔子曰：“四方之君子不辱欲与寡君为兄弟者，必见<a href="#16.14">寡小君</a>。寡小君愿见。”孔子辞谢，不得已而见之。夫人在<a href="#chi1">絺</a><a href="#wei2a">帷</a>中，孔子入门，<a href="#nanmian">北面</a><a href="#baili">稽首</a>。夫人自帷中<a href="#zaibai">再拜</a>，环佩玉声璆然。孔子曰：“吾<a href="#xiang4a">乡</a>为弗见，见之，礼答焉。”子路不说。孔子<a href="#shi3a">矢</a>之曰：“予所否者，天厌之！天厌之！”居卫月余，灵公与夫人同车，宦者雍渠参乘，出，使孔子为次乘，招摇市过之。孔子曰：“吾未见好德如好色者也。”于是丑之，去卫，过曹。</span>（主：住。璆（<span class="lypinyin">qiú</span>）：玉饰相互撞动的叮咚声。<a id="cansheng"></a>一车之中，尊长居左，<a href="#yu4b">御</a>者居中，参<a href="#sheng4a">乘</a>就是车右陪乘人员，以防倾侧。）</span></p>
-<p>据《汉书·王莽传》所载太皇太后诏书：<span class="lyq">孔子见南子，<a href="#zhougong">周公</a>居<a href="#she4a">摄</a>，盖<a href="#quan2">权</a>时也。</span>颜师古注：<span class="lyq">孔子欲说灵公以治道，故见南子也。</span>可以看作当时的主流观点。</p>
+<p><span>【参】</span><span>根据孔子周游列国的行程推算，子见南子约在前496年。《左传》未载此事，现仅见于《史记·孔子世家》：<span class="lyq">反乎卫，主<a href="#quboyu">蘧伯玉</a>家。灵公夫人有南子者，使人谓孔子曰：“四方之君子不辱欲与寡君为兄弟者，必见<a href="#16.14">寡小君</a>。寡小君愿见。”孔子辞谢，不得已而见之。夫人在<a href="#chi1">絺</a><a href="#wei2a">帷</a>中，孔子入门，<a href="#nanmian">北面</a><a href="#baili">稽首</a>。夫人自帷中<a href="#zaibai">再拜</a>，环佩玉声璆然。孔子曰：“吾<a href="#xiang4a">乡</a>为弗见，见之，礼答焉。”子路不说。孔子<a href="#shi3a">矢</a>之曰：“予所否者，天厌之！天厌之！”居卫月余，灵公与夫人同车，宦者雍渠参乘，出，使孔子为次乘，招摇市过之。孔子曰：“吾未见好德如好色者也。”于是丑之，去卫，过曹。</span>（主：住。璆（<span class="lypinyin">qiú</span>）：玉饰相互撞动的叮咚声。<a id="cansheng"></a>一车之中，尊长居左，<a href="#yu4b">御</a>者居中，参<a href="#sheng4a">乘</a>就是在车右陪乘，以防倾侧。）</span></p>
+<p>据《汉书·王莽传》所载太皇太后诏书：<span class="lyq">孔子见南子，<a href="#zhougong">周公</a>居<a href="#she4a">摄</a>，盖<a href="#quan2">权</a>时也。</span>颜师古注：<span class="lyq">孔子欲说灵公以治道，故见南子也。</span>可以看作汉唐间的主流观点。</p>
 </div>
 </li>
 <li><p><a id="shi3a"></a><span class="lyterm">矢</span>（<span class="lypinyin">shǐ</span>）：赌咒发誓。<span class="lyexample"><span>【例】</span><span>成语“矢口否认”意思是一口咬定绝不承认。</span></span></p></li>
@@ -3647,7 +3647,10 @@ img.characterimg {
 <p><span class="lyterm">不俟（<span class="lypinyin">sì</span>）驾行矣</span>：不等车（准备好）就（先）徒步赶去了。<a id="si4a"></a><span class="lyterm">俟</span>：等待。<span class="lyexample"><span>【例】</span><span><a href="#11.26" class="lyref">11.26</a> <span class="lyq">如其礼乐，以俟君子。</span></span></span></p>
 <p>这里强调的是对君命公职的尊重。乘车当然会比徒步快，车驾备好了从后面赶上来，再乘也不迟。<span class="lyseealso"><span>【参】</span><span>《礼记·玉藻》：<span class="lyq">凡君召，……在<a href="#guan1">官</a>不俟屦，在外不俟车。</span>（<a id="ju4a"></a>屦（<span class="lypinyin">jù</span>）：鞋。）</span></span></p>
 </li></ul>
-<p><span class="lyseealso"><span>【参】</span><span>到了孟子的时代，礼贤下士成为风气。《孟子·公孙丑下》里，齐君相召，孟子甚至称病不往。他人责以不敬，孟子反驳：<span class="lyq">将大有为之君，必有所不召之臣；欲有谋焉，则<a href="#jiu4a">就</a>之。</span>能以贤臣为师为友，才会成就王霸之业，并引曾子的话说：<span class="lyq">彼以其富，我以吾仁；彼以其爵，我以吾义——吾何慊乎哉？</span>（慊（<span class="lypinyin">qiàn</span>）：欠缺，不足。）</span></span></p>
+<div class="lyseealso">
+<p><span>【参】</span><span>到了孟子的时代，礼贤下士成为风气。《孟子·公孙丑下》里，齐君相召，孟子甚至称病不往。他人责以不敬，孟子反驳：<span class="lyq">将大有为之君，必有所不召之臣；欲有谋焉，则<a href="#jiu4a">就</a>之。</span>能以贤臣为师为友，才会成就王霸之业，并引曾子的话说：<span class="lyq">彼以其富，我以吾仁；彼以其爵，我以吾义——吾何慊乎哉？</span>（慊（<span class="lypinyin">qiàn</span>）：欠缺，不足。）</span></p>
+<p>另外，“王不留行”是一味中草药，《本草纲目》说：<span class="lyq">此物性走而不住，虽有王命，不能留其行，故名</span>，也许是从本章获得的命名灵感。</p>
+</div>
 </div>
 </div>
 <a id="10.21"></a><div class="lyblob">
